--- a/src/styles/Manager.css
+++ b/src/styles/Manager.css
@@ -1,7 +1,7 @@
 .ReactModal__Overlay{
     z-index: 20;
 }
-#btn-med{
+.btn-med{
     margin: 15% auto 0 auto;
     margin-right: 5%;
     color: white;
